Bug 309704. Keyboard-only users get stuck in plugins (applet/embed should only be focusable, not tabbable). r=bryner, sr=bz